fix(header): menu micro alignments

--- a/src/components/global/header/header-interactive.scss
+++ b/src/components/global/header/header-interactive.scss
@@ -93,8 +93,8 @@
 
     @media (min-width: 42rem) {
       position: absolute;
-      top: calc(100% + 12px);
-      right: 0;
+      top: calc(100% + 10px);
+      right: -12px;
       bottom: auto;
       left: auto;
       border-top: none;
@@ -103,7 +103,7 @@
       max-height: calc(100vh - var(--kd-header-height));
 
       &.left {
-        left: 0;
+        left: -12px;
         right: auto;
       }
     }
@@ -148,7 +148,7 @@
   display: flex;
   position: relative;
   align-items: center;
-  padding: 8px 16px 8px 8px;
+  padding: 8px 8px 8px 12px;
   cursor: pointer;
   background: none;
   border: none;
