--- a/src/components/global/header/headerFlyout.scss
+++ b/src/components/global/header/headerFlyout.scss
@@ -13,9 +13,17 @@
   gap: 12px;
   width: 100%;
   color: var(--kd-color-text-primary);
-  padding: 16px 16px 16px 8px;
+  padding: 16px 12px 16px 8px;
   height: 56px;
   text-decoration: none;
+
+  ::slotted(kd-icon) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+  }
 
   @media (min-width: 42rem) {
     justify-content: center;
@@ -29,7 +37,7 @@
   color: var(--kd-color-text-tertiary-bold);
   font-weight: 500;
   text-transform: uppercase;
-  padding: 8px 16px 8px 8px;
+  padding: 8px;
   border-bottom: 1px solid var(--kd-color-border-light);
 }
 
