--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -12,7 +12,7 @@
   position: relative;
   align-items: center;
   gap: 12px;
-  padding: 16px 16px 16px 8px;
+  padding: 16px 12px 16px 8px;
   text-decoration: none;
   color: var(--kd-color-text-primary);
   white-space: nowrap;
@@ -21,6 +21,10 @@
     outline-color 150ms ease-out;
   outline: 2px solid transparent;
   outline-offset: -2px;
+
+  @media (min-width: 42rem) {
+    padding-right: 16px;
+  }
 
   &:hover {
     background: var(--kd-color-background-primary-hover);
@@ -44,6 +48,14 @@
       color: var(--kd-color-text-inversed);
     }
   }
+
+  ::slotted(kd-icon) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .level {
@@ -60,7 +72,7 @@
   &--2 {
     .nav-link {
       @include typography.type-ui-02;
-      padding: 8px 16px 8px 8px;
+      padding: 8px;
       height: 40px;
       color: var(--kd-color-text-secondary);
 
