--- a/src/components/global/localNav/localNav.scss
+++ b/src/components/global/localNav/localNav.scss
@@ -121,7 +121,7 @@ nav {
   outline-offset: -2px;
   font: inherit;
   color: var(--kd-color-text-secondary);
-  padding: 8px 16px 8px 8px;
+  padding: 8px 12px;
   cursor: pointer;
   display: flex;
   align-items: center;
